# molgx-core-uv

./: .gitignore  README.md  pyproject.toml  setup.cfg  tmp.py
example/: main.py
example/jupyter_notebook/: Demo.ipynb  Demo2.ipynb  feature_fp.csv  move.py  train.old.py  train.py
src/molgx/: FeatureEstimation.py  Prediction.py  PredictionRapids.py  PredictionTorch.py  __init__.py
